plugins
{
	id "fabric-loom" version "1.7-SNAPSHOT"
}

version = project.mod_version
group = project.maven_group

base
{
	archivesName = "${project.archives_base_name}-FABRIC-${project.minecraft_version}"
}

repositories
{
	maven { url = "https://maven.parchmentmc.org/" }
}

dependencies
{
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.layered() {
		officialMojangMappings()
		parchment("org.parchmentmc.data:parchment-${project.mappings_version}@zip")
	}

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources
{
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") { expand "version": project.version }
}

tasks.withType(JavaCompile).configureEach { it.options.release = 21 }

java
{
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}